Fixed hover on mobile

--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -47,6 +47,12 @@ h1 {
   font-weight: normal;
 }
 
+@include for-mobile-layout {
+  *:hover {
+    pointer-events: auto;
+  }
+}
+
 // ::-webkit-scrollbar {
 //     width: 8px;
 //   }
@@ -62,8 +68,8 @@ h1 {
 //   }
 
 canvas {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
